# Stable_diffudion_theory

./: .gitignore  main.py  pyproject.toml
LDM/: U-Net.ipynb  VAE-show.ipynb
diffusion-model/: denoising_diffusion_process.ipynb  schedule_type.ipynb  train_denoising_diffusion_process.ipynb  教材_ガウス分布.ipynb
